--- a/usr/lib/lua/luci/view/admin_status/ttl64.htm
+++ b/usr/lib/lua/luci/view/admin_status/ttl64.htm
@@ -1,13 +1,31 @@
 <%+header%>
 <h2>Choose Your Modem Mode</h2>
+
+<% if applied then %>
+<div class="cbi-section">
+    <div class="alert-message success"><%=applied%></div>
+</div>
+<% end %>
+
 <form method="post">
-    <button class="cbi-button cbi-button-apply" name="action" value="mod">Hotspot Mode</button>
-    <p><small>IPv4,ttl64.</small></p>
+    <select name="action" class="cbi-input-select">
+        <option value="mod">Hotspot Mode (IPv4, ttl64)</option>
+        <option value="nss">NSS Mode (IPv4v6, NSS CPU, Halal)</option>
+        <option value="vpn">VPN Mode (IPv4, NSS CPU, ttl64)</option>
+    </select>
+    <button type="submit" class="cbi-button cbi-button-apply">Apply</button>
+</form>
 
-    <button class="cbi-button cbi-button-apply" name="action" value="nss">NSS Mode</button>
-    <p><small>IPv4v6,NSS CPU,Halal.</small></p>
+<hr>
 
-    <button class="cbi-button cbi-button-apply" name="action" value="vpn">VPN Mode</button>
-    <p><small>IPv4,NSS CPU,ttl64.</small></p>
+<h2>Lock / Auto Band Selection</h2>
+<form method="post">
+    <select name="action" class="cbi-input-select">
+        <option value="autoband">Auto Band</option>
+        <option value="lock4g">Lock 4G</option>
+        <option value="lock4g5g">Lock 5G-NSA </option>
+        <option value="lock5gsa">Lock 5G-SA</option>
+    </select>
+    <button type="submit" class="cbi-button cbi-button-apply">Apply</button>
 </form>
 <%+footer%>
