Update ttl64.htm-Change Wan ip update proper call

--- a/usr/lib/lua/luci/view/admin_status/ttl64.htm
+++ b/usr/lib/lua/luci/view/admin_status/ttl64.htm
@@ -74,13 +74,11 @@
 <h2>Change WWAN IP</h2>
 <form method="post">
     <input type="hidden" name="action" value="Change Wan ip">
-    
     <div class="cbi-section">
         <div class="cbi-value">
-           <label class="cbi-value-title">Click "Button below" to change WAN IP,If using passwall, this will auto reload</label>
-            
+           <label class="cbi-value-title">Click "Change WWAN IP" to change WWAN IP,If using passwall wil reload the services</label>
             <div class="cbi-value-field">
-                <button type="submit" class="cbi-button cbi-button-apply">Change WWan IP & Reload VPN</button>
+                <button type="submit" class="cbi-button cbi-button-apply">Change WWAN IP</button>
             </div>
         </div>
     </div>
